--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -131,13 +131,16 @@
   .preview .projectImage {
     width: 100%;
     aspect-ratio: 1 / 1;
-    outline: solid 1px pink;
+
   
-    background-image: url('../images/ebook-example.jpg');
-    background-position: top center;
-    background-size: cover;
   }
   
+  .projectImage__Img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+  }
+
   .preview .card {
     margin-inline: 20px;
   
@@ -203,12 +206,18 @@
     width: 75px;
     height: 75px;
     border-radius: 50%;
-    background-image: url('../images/avatar.webp');
     background-position: center;
     background-size: cover;
     margin-bottom: 0.8rem;
+    object-fit: contain;
   }
   
+  .card__authorImg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
   .card .card__job {
     margin-bottom: 0.2rem;
   }
@@ -438,3 +447,7 @@
   .icon__github {
     background-image: url('../images/icons/github.svg');
   }
+
+
+
+  
